--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "author": "tarcode, pholisa, nkosi, mawande, e-manual",
   "license": "BSD-2-Clause",
   "dependencies": {
+    "body-parser": "^1.14.0",
     "express": "~4.13.1",
     "express-handlebars": "~2.0.1",
-    "mysql": "~2.9.0",
+    "express-myconnection": "~1.0.4",
     "express-session": "~1.11.3",
-    "express-myconnection": "~1.0.4"
+    "mysql": "~2.9.0"
   }
 }
