User sign up details saved to database success fully! But allows duplicate registrations.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-handlebars": "~2.0.1",
     "express-myconnection": "~1.0.4",
     "express-session": "~1.11.3",
+    "mongodb": "^2.0.43",
     "mysql": "~2.9.0"
   }
 }
