--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "CodeXource",
   "version": "0.0.0",
-  "description": "socket.io chat usage",
+  "description": "Codex Resources App",
   "main": "app.js",
   "scripts": {
     "test": ""
