--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql": "~2.9.0",
     "selectize": "~0.12.1",
     "sifter": "~0.4.3",
-    "microplugin": "0.0.3"
+    "microplugin": "0.0.3",
+    "socket.io": "~1.3.7"
   }
 }
